--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jquery": "^3.3.1",
     "jsonformatter": "^0.7.0",
     "mysql": "^2.15.0",
+    "ng2-toastr": "^4.1.2",
     "npm": "^5.8.0",
     "openpgp": "^3.0.4",
     "rxjs": "^5.5.8",
